--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,14 +5,18 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Generate snake SVGs
-      - uses: Platane/snk/svg-only@v3
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: AbdelrahmanAboegela
           outputs: |
